Added ScrollToTop btn, scrolling overlay on cards, some fixes

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="css/pharma.css">
     <link rel="stylesheet" href="bower_components/aos/dist/aos.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+
 	
 </head>
 <body>
@@ -27,24 +29,29 @@
 	<!-- <div class="container"></div> -->
 
 	<div class="mainJ" data-aos="zoom-out-down" data-aos-anchor-placement="top-top" data-aos-duration="1000" data-aos-delay="500" data-aos-once=true>
-		<div class="container">
-			<div class="col-md-8" style="padding-top: 13%; margin-left: -5%" data-aos="fade-right" data-aos-anchor-placement="top-top" data-aos-delay="1500" data-aos-once=true>
-				<blockquote class="blockquote" style="background: rgba(0,0,0,0.4); ">
+	
+			<div class="col-md-7" style="padding-top: 13% !important; padding: 0; margin: 0;" data-aos="fade-right" data-aos-anchor-placement="top-top" data-aos-delay="1500" data-aos-once=true>
+				<blockquote class="blockquote" style="background: rgba(0,0,0,0.4);">
 					<h1 style="font-size: 3em">Добро пожаловать!</h1>
 					<p class="lead">Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового</p>		
 				</blockquote>
 			</div>
+
 			<!-- <div class="col-md-8 col-md-offset-2 bBlock">
 				<button class="btns btn-tm" onclick="location.href='#products'" id="tm">Продукты <b class="glyphicon glyphicon-qrcode"></b></button>
 				<button class="btns btn-tm" onclick="location.href='#about'" id="tm1">О нас <b class="glyphicon glyphicon-fire"></b></button>
 				<button class="btns btn-tm" onclick="location.href='#personal'" id="tm2">Коллектив <b class="glyphicon glyphicon-user"></b></button>
 			</div> -->
-		</div>
+		
 	</div>
+
+	<a href="#" id="toTopBtn" title="Наверх" class="text-center">
+		<i class="fas fa-angle-up"></i>
+	</a>
 
 	<section class="container-fluid">
 		<div class="container">
-			<h1 class="text-center">Наши достижения!!!</h1>
+			<h1 class="text-center" data-aos="slide-up" data-aos-anchor-placement="botttom-bottom" data-aos-once=true>Наши достижения!!!</h1>
 			<div class="col-md-4" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-delay="100" data-aos-once=true>
 				<div class="text-center">
 					<img src="img/atom.png" class="icon-b">
@@ -68,93 +75,78 @@
 			</div>
 		</div>
 	</section>
-
 	<section class="container-fluid parallax-bg text-center">
 		<div class="container">
-			<h1>Наши лучшие подукты</h1>
+			<h1 data-aos="slide-up" data-aos-anchor-placement="botttom-bottom" data-aos-once=true>Наши лучшие подукты</h1>
 			<div class="col-md-12">
-				<div class="col-md-4" data-aos="fade-down" data-aos-anchor-placement="top-center" data-aos-delay="100" data-aos-once=true>
+				<div class="col-md-4" data-aos="zoom-in" data-aos-anchor-placement="top-center" data-aos-delay="100" data-aos-once=true>
 					<div class="pCards pBg-1">
-						<div class="pCardT">
-							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
-						</div>
+						<p class="text-justify pCardT"><!-- &emsp;&emsp; -->Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut praesentium iusto, ipsum tenetur inventore labore nihil quos explicabo possimus harum nulla sed repellendus rem voluptate officiis recusandae! At, vero, animi?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate reiciendis minus, et quidem quia cum odio vel facilis debitis eius. Dolore provident nam incidunt doloremque quia, delectus, harum ratione ullam.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
 					</div>
 				</div>
-				<div class="col-md-4" data-aos="fade-down" data-aos-anchor-placement="top-center" data-aos-delay="200" data-aos-once=true>
+				<div class="col-md-4" data-aos="zoom-in" data-aos-anchor-placement="top-center" data-aos-delay="200" data-aos-once=true>
 					<div class="pCards pBg-2">
-						<div class="pCardT">
-							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
-						</div>
+						<p class="text-justify pCardT"><!-- &emsp;&emsp; -->Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
 					</div>
 				</div>
-				<div class="col-md-4" data-aos="fade-down" data-aos-anchor-placement="top-center" data-aos-delay="300" data-aos-once=true>
+				<div class="col-md-4" data-aos="zoom-in" data-aos-anchor-placement="top-center" data-aos-delay="300" data-aos-once=true>
 					<div class="pCards pBg-3">
-						<div class="pCardT">
-							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
-						</div>
+						<p class="text-justify pCardT"><!-- &emsp;&emsp; -->Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
 					</div>
 				</div>
-				<div class="col-md-4" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="100" data-aos-once=true>
+				<div class="col-md-4" data-aos="zoom-in" data-aos-anchor-placement="top-center" data-aos-delay="100" data-aos-once=true>
 					<div class="pCards pBg-4">
-						<div class="pCardT">
-							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
-						</div>
+						<p class="text-justify pCardT"><!-- &emsp;&emsp; -->Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias esse sunt vitae quod modi assumenda repellendus vero blanditiis similique ex! Doloribus quis pariatur at nobis cupiditate officia distinctio, nihil. Harum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur dignissimos eveniet reprehenderit tempora, facere voluptas fugiat! Culpa voluptas accusamus quisquam, animi consequuntur quas, eveniet distinctio, laborum libero pariatur aspernatur saepe!</p>
 					</div>
 				</div>
-				<div class="col-md-4" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="200" data-aos-once=true>
+				<div class="col-md-4" data-aos="zoom-in" data-aos-anchor-placement="top-center" data-aos-delay="200" data-aos-once=true>
 					<div class="pCards pBg-5">
-						<div class="pCardT">
-							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
-						</div>
+						<p class="text-justify pCardT"><!-- &emsp;&emsp; -->Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
 					</div>
 				</div>
-				<div class="col-md-4" data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-delay="300" data-aos-once=true>
+				<div class="col-md-4" data-aos="zoom-in" data-aos-anchor-placement="top-center" data-aos-delay="300" data-aos-once=true>
 					<div class="pCards pBg-6">
-						<div class="pCardT">
-							<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
-						</div>
+						<p class="text-justify pCardT"><!-- &emsp;&emsp; -->Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora, cupiditate deleniti ea.</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
-	<section class="container-fluid" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-once=true>	
-		<div class="container text-center" id="personal">
-			<h1>Наш коллектив</h1>
-			<div class="col-md-3">
-				<img src="img/woman-11.png" class="img-responsive">
+	<section class="container-fluid text-center" id="personal" style="margin: 32px auto">	
+			<h1 data-aos="slide-up" data-aos-anchor-placement="botttom-bottom" data-aos-once=true>Наш коллектив</h1>
+			<div class="col-md-3" data-aos="zoom-out-down" data-aos-anchor-placement="top-center" data-aos-delay="100" data-aos-once=true>
+				<img src="img/woman-11.png">
 				<p style="font-size: 1.6em;">Д-р.Сара Розарио</p>
 				<code>Кардиолог</code>
 				<p>Дайте краткое описание ваших основателей, чтобы стать ближе к вашим клиентам.</p>
 			</div>
-			<div class="col-md-3">
-				<img src="img/man-11.jpg" class="img-responsive">
+			<div class="col-md-3" data-aos="zoom-out-down" data-aos-anchor-placement="top-center" data-aos-delay="300" data-aos-once=true>
+				<img src="img/man-11.jpg">
 				<p style="font-size: 1.6em;">Д-р.Джон Сноуден</p>
-				<code>Конь в пальто</code>
+				<code>Шеф повар</code>
 				<p>Дайте краткое описание ваших основателей, чтобы стать ближе к вашим клиентам.</p>
 			</div>
-			<div class="col-md-3">
-				<img src="img/woman-21.png" class="img-responsive">
+			<div class="col-md-3" data-aos="zoom-out-down" data-aos-anchor-placement="top-center" data-aos-delay="200" data-aos-once=true>
+				<img src="img/woman-21.png">
 				<p style="font-size: 1.6em;">Д-р.Маппи Джинни</p>
 				<code>Просто так</code>
 				<p>Дайте краткое описание ваших основателей, чтобы стать ближе к вашим клиентам.</p>
 			</div>
-			<div class="col-md-3">
-				<img src="img/old-man1.jpg" class="img-responsive">
+			<div class="col-md-3" data-aos="zoom-out-down" data-aos-anchor-placement="top-center" data-aos-delay="400" data-aos-once=true>
+				<img src="img/old-man1.jpg">
 				<p style="font-size: 1.6em;">Д-р.Мошонидзе Каваяки</p>
 				<code>Угадайте</code>
 				<p>Дайте краткое описание ваших основателей, чтобы стать ближе к вашим клиентам.</p>
 			</div>
-		</div>
 	</section>
 
-	<section class="container-fluid parallax-bg" data-aos="fade-up" data-aos-anchor-placement="top-center" data-aos-once=true>
+	<section class="container-fluid parallax-bg">
 		<div class="container" style="padding: 2% 1%">
-			<div class="col-md-8 text-center">
+			<div class="col-md-8 text-center"  data-aos="fade-left" data-aos-anchor-placement="top-center" data-aos-once=true>
 				<iframe class="youtube-block spec" width="100%" height="430" src="https://www.youtube.com/embed/RRvbx_MjNdI" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			</div>
-			<div class="col-md-4 text-center vList" style="overflow: auto; height: 430px;">
+			<div class="col-md-4 text-center vList" style="overflow: auto; height: 430px;" data-aos="fade-right" data-aos-anchor-placement="top-center" data-aos-once=true>
 			    <ul>
 					<li>
 						<img alt="160x100" src="img/player-bg.png">
@@ -181,37 +173,38 @@
 		</div>
 	</section>
 <!-- ===================================FOOTER============================================== -->
-	<section class="col-md-12" style="background: #333; color: #fff; min-height: 200px;" id="about"  data-aos="flip-up" data-aos-anchor-placement="center-bottom" data-aos-once=true>
-		<div class="container">
+	<section class="col-md-12" style="background: #333; color: #fff;" id="about"  data-aos="flip-up" data-aos-anchor-placement="center-bottom" data-aos-once=true>
+		<div class="container" style="margin-top: 0;">
 
-			<div class="col-md-6" >
-				<h3 style="font-size: 2em;">О нас!</h3>
-				<p><b>Мы команда фирмы VellPharm</b> &mdash; Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами.</p>
+			<div class="col-md-6">
+				<h3 style="font-size: 2em;"><span style="background: url(img/icon.png) center no-repeat; background-size: 100%;">   </span> нас!</h3>
+				<p><b>Мы команда фирмы VelPharm</b> &mdash; Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами.</p>
 			</div>
-			<div class="col-md-6" >
-				<h3 style="font-size: 2em;" class="text-right">Контакты</h3>
+			<div class="col-md-6">
+				<h3 style="font-size: 2em;" class="text-right"><span style="background: url(img/1contanct.png) center no-repeat; background-size: 110%">   </span> Контакты</h3>
 				<div class="vcard text-right">
 					<div class="company-name">
-						<span class="fn org"><b>VellPharm</b></span>
+						<span class="fn org"><b>VelPharm</b></span>
 					</div>
-					<div class="adr">
-						Адрес:
+					<div class="adr"><i>
 						<span class="postal-code">100015</span>,
 						<span class="country-name">Узбекистан</span>,
+					    <span class="region">Ташкентская обл.</span>
 						<span class="locality">г.Ташкент</span>,
-					    <span class="region">Ташкентская обл.</span> 
-						<span class="street-address">45 Aybek Street</span>
+						<span class="street-address">45 ул. Айбека</span></i>
+						 :Адрес <b class="glyphicon glyphicon-map-marker"></b>
 					</div>
 					<div>
-						Телефон: <abbr title="+998 ХХ ХХХ-ХХ-ХХ" class="tel">+998 ХХ ХХХ-ХХ-ХХ</abbr>
+						<i><abbr title="+998 ХХ ХХХ-ХХ-ХХ" class="tel">+998 ХХ ХХХ-ХХ-ХХ</abbr></i> :Телефон <b class="glyphicon glyphicon-earphone"></b>
 					</div>
 					<div>
-						Факс: <abbr title="+998 ХХ ХХХ-ХХ-ХХ" class="tel">+998 ХХ ХХХ-ХХ-ХХ</abbr>
+						<i><abbr title="+998 ХХ ХХХ-ХХ-ХХ" class="tel">+998 ХХ ХХХ-ХХ-ХХ</abbr></i> :Факс <b class="glyphicon glyphicon-print"></b>
 					</div>
-		  			Почта:
+					<i>
 		  			<a class="email" href="mailto:Dunel@farma.uz">
-			    		Dunel@farma.uz
-			  		</a>
+			    		Dunel@farma.uz 
+			  		</a></i>
+			  		 :Почта <b class="glyphicon glyphicon-envelope"></b>
 				</div>
 			</div>
 			<div class="col-md-4 col-md-offset-4 text-center">
@@ -223,9 +216,9 @@
 			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11990.010517769995!2d69.2756049!3d41.297928!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x704512af6459eda3!2z0KLQsNGI0LrQtdC90YLRgdC60LjQuSDRhNCw0YDQvNCw0YbQtdCy0YLQuNGH0LXRgdC60LjQuSDQuNC90YHRgtC40YLRg9GC!5e0!3m2!1sru!2s!4v1526243598466" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</div>
 
-		<div class="container-fluid" style="padding: 0 !important;">
-			<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-6" style="margin-top:1%;">2018 © <b class="text-primary">VellPharm.uz</b> | All rights reserved. | Privacy Policy | Designed by team<b class="text-primary"> eDunyo.uz</b></div>
-			<div class="col-md-3 col-sm-3 col-xs-3">
+		<div class="container-fluid text-center" style="padding: 0 !important;">
+			<div class="col-md-6 col-md-offset-3 col-sm-6 col-sm-offset-3 col-xs-6" style="margin-top:1%;">2018 © <b class="text-primary">VelPharm.uz</b> | All rights reserved. | Privacy Policy | Designed by team<b class="text-primary"> eDunyo.uz</b></div>
+			<div class="col-md-3 col-sm-3 col-xs-6 text-center">
 				<div class="social">
 					<span class="social-t"></span>
 					<span class="social-f"></span>
